# internal/dto/request/user_req.go
@@ -1,0 +1,8 @@
+package request
+
+type CreateUserRequest struct {
+	Name     string `json:"name" validate:"required,min=3"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=6"`
+	Role     string `json:"role" validate:"required"`
+}
