# internal/router/auth_route.go
@@ -2,14 +2,15 @@ package router
 
 import (
 	"inventory-system/internal/handler"
+	"net/http"
 
 	"github.com/go-chi/chi/v5"
 )
 
 // RegisterAuthRoutes sets up the routing endpoints for authentication.
-func AuthRoutes(r chi.Router, authHandler handler.AuthHandler) {
+func AuthRoutes(r chi.Router, authHandler handler.AuthHandler, authMiddleware func(http.Handler) http.Handler) {
 	r.Route("/auth", func(r chi.Router) {
 		r.Post("/login", authHandler.Login)
-		// r.Post("/register", authHandler.Register)
+		r.With(authMiddleware).Post("/logout", authHandler.Logout)
 	})
 }
